[gd_scene load_steps=10 format=2]

[ext_resource path="res://Images/UI/panel.png" type="Texture" id=1]
[ext_resource path="res://Images/UI/knob.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Roboto-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/KingdomButton.gd" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 color: hint_color = vec4(1.0, 1.0, 1.0, 1.0);

void fragment() {
    vec4 texColor = texture(TEXTURE, UV);
    vec4 finalColor = vec4(texColor.r); 
    COLOR = finalColor * color;
}
"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;
uniform vec4 color: hint_color = vec4(1.0, 1.0, 1.0, 1.0);

void fragment() {
    vec4 texColor = texture(TEXTURE, UV);
    vec4 finalColor = vec4(texColor.r); 
    COLOR = finalColor * color;
}
"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 4 )
shader_param/color = Color( 1, 0.12549, 0.12549, 1 )

[node name="KingdomButton" type="Control"]
margin_bottom = 16.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
label = NodePath("Rect/NinePatchRect/Label")
rect_color_mouser_over = Color( 1, 1, 1, 0.2 )
text_color_when_selected = Color( 0.168627, 0.168627, 0.168627, 1 )

[node name="Rect" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -8.0
margin_top = -8.0
margin_right = 152.0
margin_bottom = 24.0
rect_rotation = -60.0
rect_pivot_offset = Vector2( 16, 16 )
text = "World 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Rect"]
material = SubResource( 2 )
margin_right = 160.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
size_flags_horizontal = 9
size_flags_vertical = 9
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Rect/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -9.0
margin_right = 60.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "World 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circle" type="TextureRect" parent="Rect"]
material = SubResource( 5 )
margin_left = 10.0
margin_top = 10.0
margin_right = 22.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Rect" to="." method="_on_Rect_button_down"]
[connection signal="mouse_entered" from="Rect" to="." method="_on_Rect_mouse_entered"]
[connection signal="mouse_exited" from="Rect" to="." method="_on_Rect_mouse_exited"]
